@@ -45,3 +45,5 @@ Send bug reports and/or patches to Ray Donnelly <mingw.android at gmail dot com>
             Removed redundant llvmCore installation (llvmgcc *is* still provided)
             Removed some empty directories
             Linux :: Compressed to a tar.xz as 7z isn't 'native' enough
+
+16-05-12 :: 64bit OS X compile fixed (--enable-multilibs added to configure for gcc, llvmgcc)
